# evm-coder

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
procedural/: Cargo.toml
procedural/src/: lib.rs  solidity_interface.rs  to_log.rs
procedural/src/abi_derive/: derive_enum.rs  derive_flags.rs  derive_struct.rs  mod.rs
procedural/src/structs/: common.rs  mod.rs  parse.rs
src/: custom_signature.rs  events.rs  lib.rs
src/abi/: impls.rs  mod.rs  test.rs  traits.rs
src/solidity/: impls.rs  mod.rs  traits.rs
tests/: abi_derive_generation.rs  bondrewd_generation.rs  conditional_is.rs  derive.rs  generics.rs  log.rs  random.rs  solidity_generation.rs
tests/build_failed/: abi_derive_flags_generation.rs  abi_derive_flags_generation.stderr  custom_signature_over_max_size.stderr
