[workspace]
members = ['./procedural']
package.license = "MIT"
package.version = "0.3.1"

[package]
edition = "2021"
license.workspace = true
name = "evm-coder"
version.workspace = true

[dependencies]
sha3-const = { version = "0.1.1", default-features = false }
# evm-coder reexports those proc-macro
evm-coder-procedural = { path = "./procedural" }
# Evm uses primitive-types for H160, H256 and others
primitive-types = { version = "0.12.1", default-features = false }
# Evm doesn't have reexports for log and others
ethereum = { version = "0.14.0", default-features = false }
# We have tuple-heavy code in solidity.rs
impl-trait-for-tuples = "0.2.2"

[dev-dependencies]
# We want to assert some large binary blobs equality in tests
hex = "0.4.3"
hex-literal = "0.3.4"
similar-asserts = "1.4"
trybuild = "1.0"
# Used to demonstrate enum derive feature
derivative = { version = "2.2" }

[features]
default = ["std"]
std = ["ethereum/std", "primitive-types/std"]
# Stub/interface generation
stubgen = []
