[package]
description = "Implementation of proc-macro for evm-coder"
documentation.workspace = true
edition = "2021"
license.workspace = true
name = "evm-coder-procedural"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
# Ethereum uses keccak (=sha3) for selectors
sha3 = "0.10.1"
# Value formatting
Inflector = "0.11.4"
hex = "0.4.3"
# General proc-macro utilities
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
bondrewd = []